--- a/src/components/App.css
+++ b/src/components/App.css
@@ -829,8 +829,12 @@ a.result + #matches .result-content #icon > :not(.thumb) img { width:40px; }
 #matches .match.by + .by,
 #matches .match.publisher + .publisher { margin-top:-11px; }
 
-#matches .match.publisher div.multi > span { display:inline-block; }
+.highlight:empty { display:none; }
 
+/*
+#matches .match.publisher div.multi > span.highlight ~ span,
+#matches .match.publisher div.multi > span.highlight { display:inline-block; }
+*/
 
 /*
 #matches .match.publisher.en > span > span,
