--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3709,3 +3709,20 @@ a.result .contenu ul > div:last-child h3[lang=bo] span { font-size:18px;}
    .SidePane.left { padding-left:calc((100vw - 700px) / 2 );}
 
 }
+
+
+#root.auto_rela > .auto_rela > .resource { padding:0; }
+#root.auto_rela > .auto_rela > .resource > .auto_rela > :not(#viewer),
+#root.auto_rela > .auto_rela > .resource > .index { display:none; }
+#root.auto_rela > .auto_rela > .resource > .auto_rela { margin-left:0; width:100%;}
+
+
+@media only screen and (orientation:portrait) and (max-width:480px){
+   body {
+     width: 100vh;
+     height: 100vw;
+     transform: rotate(90deg) translateY(-100vw);
+     transform-origin: 0px 0px;
+   }
+}
+
