--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2284,10 +2284,9 @@ span.in { font-weight:500;padding-left:0px; padding-right:10px; margin-left:36px
 
 .resource .data > [data-prop="bdo:instanceReproductionOf"] > h3 { margin-right:20px; box-sizing: border-box; width:170px;}
 
-/* see #423
+/* see #423 */
 .resource .data > [data-prop="bdo:workHasTranslation"] > h3 { display:none; }
 .resource .data > [data-prop="bdo:workHasTranslation"] > .group { width:100%; }
-*/
 
 .resource .data > [data-prop="bdo:workHasTranslation"] > .group > .sub > h4.first {  width: calc(190px - 15px);  padding-right: 15px; margin-right:0; font-size:16px;  }
 .resource .data > [data-prop="bdo:workHasTranslation"] > .group > .sub > h4.first a.propref { color: #343434;  font-size: 16px; letter-spacing: 0px;
