--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3732,6 +3732,7 @@ a.result .contenu ul > div:last-child h3[lang=bo] span { font-size:18px;}
 #root.auto_rela > .auto_rela > .resource > .index { display:none; }
 #root.auto_rela > .auto_rela > .resource > .auto_rela { margin-left:0; width:100%;}
 
+.SidePane.left #closeSettings { display:none; }
 
 @media (min-device-width:768px)
 {
@@ -3846,13 +3847,32 @@ a.result .contenu ul > div:last-child h3[lang=bo] span { font-size:18px;}
    #root .App .resultPage #res-container { padding-top:0; }
    #root .App .resultPage #filters-UI > div { padding-left:40px;padding-right:40px; }
    #root .App .resultPage #res-header > div { padding-left:40px;padding-right:40px; }
-   #root .App .resultPage #res-header > div .widget-header { margin-left:auto; margin-right:auto;}
+   #root .App .resultPage #res-header > div .widget-header { margin-left:0; margin-right:auto;}
    #root .App .resultPage #res-container h4 { font-size:24px;}
    #root .App .resultPage .result-content { padding-left:20px;padding-right:20px;}
    .result-content #permalink { right:20px;}
    a.result  {  max-width: calc(100% - 30px); }
    #matches .match { max-width: calc(100% - 40px);}
    
+
+   #settings { position:fixed;bottom:5px;right:5px; border-radius:50%; background:white;box-shadow: 0 0 5px 0px rgb(0 0 0 / 13%); 
+      padding:5px;
+   }
+
+   .SidePane.left { position:fixed; right:0; left:auto; transition:right 400ms ease-in-out; padding:10px; height:100vh;overflow:scroll;}
+   .SidePane.left.closed { right:-300px; left:auto;}
+   .SidePane.left #closeSettings { display:block; position:absolute;right:0px;top:10px;}
+   .SidePane.left .widget-header  { text-align: left;  }
+   #root .App #res-container .SidePane.left p  { padding-left:0;  }
+   #pagine div a { margin:0 8px; }
+
+   .result-content #icon { width: 120px;}
+   .result-content #icon > .thumb { width:100px; height:100px;}
+
+   .result-content > .result > .contenu { margin-left:125px;}
+   a.result ~ #matches { margin-left:150px; }
+
+   .match .inRoot + .sepa { display:block;border:none; }
 }
 
 
